# bluegate_esp32c6

./: .gitignore  BLE.md  Cargo.toml  FSM.md  build.sh
src/: ble_bas_peripheral.rs  fsm.rs  gpi.rs  gpo.rs  keys.rs  lib.rs  main.rs  settings.rs  types.rs
